--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 	<div class="container text-center sidebar-sticky">
 		<div class="sidebar-about text-center">
 			<a href="/"><h1 class="brand"></h1></a>
-			 <img src="/img/hugo.png" alt="Author Image" class="img-circle headshot center"> 
+			 <img src="/img/ryan_sophie_snow.png" alt="Author Image" class="img-circle headshot center"> 
 			<p class="lead">
 				 Ryan Opel 
 			</p>
@@ -54,7 +54,7 @@
 					<a href="/posts/"> <span>Posts</span></a>
 				</li>
 				<li>
-					<a href="/about/"> <span>About</span></a>
+					<a href="/about/me/"> <span>About</span></a>
 				</li>
 		</li>
 	</ul>
