Site reorganization and changed CSS

--- a/public/404.html
+++ b/public/404.html
@@ -51,7 +51,10 @@
 		
 		
 				<li>
-					<a href="/posts/"> <span>Posts</span></a>
+					<a href="/"> <span>Home</span></a>
+				</li>
+				<li>
+					<a href="/post/"> <span>Posts</span></a>
 				</li>
 				<li>
 					<a href="/about/me/"> <span>About</span></a>
@@ -62,8 +65,6 @@
 
         <p>
 		<section class="row text-center">
-	
-	<a href="https://twitter.com/_opelr"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
 	
 	
 	
